# airvent

./: .gitignore  .gitmodules  CMakeLists.template  CMakeLists.txt  LICENSE  README.md  doxyfile  gen
cmake/Modules/: FindCZMQ.cmake  FindZeroMQ.cmake
lib/: CMakeLists.txt
plugins/: Makefile  hello.c  python.c
src/: CMakeLists.txt  commands.c  commands.h  configure.h.in  control.c  dhtstore.c  spawn.c  spawn.h  ventctl.in  ventd.c  ventd.h
